fixed day/night button overlap issue

--- a/src/components/SceneManager/SceneVariantSwitch.scss
+++ b/src/components/SceneManager/SceneVariantSwitch.scss
@@ -10,9 +10,6 @@
   font-size: $base-font-size;
   justify-content: center;
   max-width: 100%;
-  position: absolute;
-  right: 1rem;
-  bottom: 1rem;
   z-index: 1;
   &:focus {
     outline-style: solid;
